PR-21: Prepare User sample data

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Shubham Kshirsagar",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
+    "js": "^0.1.0",
     "mongoose": "^8.4.3"
   },
   "devDependencies": {
