--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\"  \"npm run client\" "
+    "dev": "concurrently \"npm run server\"  \"npm run client\" ",
+    "data": "node backend/seeder.js -d",
+    "data:import":"node backend/seeder.js",
+    "data:destroy": "node backend/seeder.js -d"
   },
   "author": "Shubham Kshirsagar",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "express": "^4.19.2",
     "js": "^0.1.0",
     "mongoose": "^8.4.3"
