--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.19.2",
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.3"
+    "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
